deployment/cobranca-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servico-cobranca
  labels:
    app: servico-cobranca
spec:
  template:
    metadata:
      name: servico-cobranca
      labels:
        app: servico-cobranca
    spec:
      containers:
        - name: servico-cobranca
          image: vwnunes/tech-challenge-61:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /servico-cobranca-volume
              name: servico-cobranca-volume
      volumes:
        - name: servico-cobranca-volume
          hostPath:
            path: /home/servico-cobranca-volume
            type: DirectoryOrCreate
  replicas: 2
  selector:
    matchLabels:
      app: servico-cobranca
