deployment/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /servico-pagamento-volume
              name: servico-pagamento-volume
      volumes:
        - name: servico-pagamento-volume
          hostPath:
            path: /home/servico-pagamento-volume
            type: DirectoryOrCreate
