deployment/pagamento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pagamento-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
  selector:
    app: servico-pagamento
